; ModuleID = '/home/carl/AnghaBench/php-src/ext/pdo_pgsql/extr_pgsql_driver.c_pgsql_lob_close.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/pdo_pgsql/extr_pgsql_driver.c_pgsql_lob_close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64 }
%struct.pdo_pgsql_lob_self = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*, i32)* @pgsql_lob_close to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pgsql_lob_close(%struct.TYPE_3__* %0, i32 %1) #0 {
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.pdo_pgsql_lob_self*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = inttoptr i64 %8 to %struct.pdo_pgsql_lob_self*
  store %struct.pdo_pgsql_lob_self* %9, %struct.pdo_pgsql_lob_self** %5, align 8
  %10 = load i32, i32* %4, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %20

12:                                               ; preds = %2
  %13 = load %struct.pdo_pgsql_lob_self*, %struct.pdo_pgsql_lob_self** %5, align 8
  %14 = getelementptr inbounds %struct.pdo_pgsql_lob_self, %struct.pdo_pgsql_lob_self* %13, i32 0, i32 2
  %15 = load i32, i32* %14, align 4
  %16 = load %struct.pdo_pgsql_lob_self*, %struct.pdo_pgsql_lob_self** %5, align 8
  %17 = getelementptr inbounds %struct.pdo_pgsql_lob_self, %struct.pdo_pgsql_lob_self* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @lo_close(i32 %15, i32 %18)
  br label %20

20:                                               ; preds = %12, %2
  %21 = load %struct.pdo_pgsql_lob_self*, %struct.pdo_pgsql_lob_self** %5, align 8
  %22 = getelementptr inbounds %struct.pdo_pgsql_lob_self, %struct.pdo_pgsql_lob_self* %21, i32 0, i32 0
  %23 = call i32 @zval_ptr_dtor(i32* %22)
  %24 = load %struct.pdo_pgsql_lob_self*, %struct.pdo_pgsql_lob_self** %5, align 8
  %25 = call i32 @efree(%struct.pdo_pgsql_lob_self* %24)
  ret i32 0
}

declare dso_local i32 @lo_close(i32, i32) #1

declare dso_local i32 @zval_ptr_dtor(i32*) #1

declare dso_local i32 @efree(%struct.pdo_pgsql_lob_self*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
